--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-54">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/button.css">
 </head>
 <body>
-    
-    <button class="button-8" role="button">Button 8</button>
-
+    <div class="screen">
+        <div class="scr-row"></div>
+        <div class="scr-row"></div>
+    </div>
+    <div class="button-container">
+        <div class="">
+            <button class="button-54" role="button">
+                Clr
+            </button>
+            <button class="button-54" role="button">
+                <img src="./img/delete-svgrepo-com.svg" alt="">
+            </button>
+        </div>
+        <div class="">
+            <button class="button-54" role="button">7</button>
+            <button class="button-54" role="button">8</button>
+            <button class="button-54" role="button">9</button>
+            <button class="button-54" role="button">+</button>
+        </div>
+        <div class="">
+            <button class="button-54" role="button">4</button>
+            <button class="button-54" role="button">5</button>
+            <button class="button-54" role="button">6</button>
+            <button class="button-54" role="button">—</button>
+        </div>
+        <div class="">
+            <button class="button-54" role="button">1</button>
+            <button class="button-54" role="button">2</button>
+            <button class="button-54" role="button">3</button>
+            <button class="button-54" role="button">X</button>
+        </div>
+        <div class="">
+            <button class="button-54" role="button">.</button>
+            <button class="button-54" role="button">0</button>
+            <button class="button-54" role="button">=</button>
+            <button class="button-54" role="button">/</button>
+        </div>
+    </div>
 </body>
 </html>
