Change icon to text

--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/button.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="screen">
-        <div class="scr-row"></div>
-        <div class="scr-row"></div>
+        <div id="expression" class="scr-row"></div>
+        <div id="result" class="scr-row"></div>
     </div>
     <div class="button-container">
         <div class="">
-            <button class="button-54" role="button">
-                Clr
-            </button>
-            <button class="button-54" role="button">
-                <img src="./img/delete-svgrepo-com.svg" alt="">
-            </button>
+            <button class="button-54" role="button">Clr</button>
+            <button class="button-54" role="button">Del</button>
         </div>
         <div class="">
             <button class="button-54" role="button">7</button>
@@ -31,13 +28,13 @@
             <button class="button-54" role="button">4</button>
             <button class="button-54" role="button">5</button>
             <button class="button-54" role="button">6</button>
-            <button class="button-54" role="button">—</button>
+            <button class="button-54" role="button">-</button>
         </div>
         <div class="">
             <button class="button-54" role="button">1</button>
             <button class="button-54" role="button">2</button>
             <button class="button-54" role="button">3</button>
-            <button class="button-54" role="button">X</button>
+            <button class="button-54" role="button">x</button>
         </div>
         <div class="">
             <button class="button-54" role="button">.</button>
